# insurance-bot

./: .gitignore  .pre-commit-config.yaml  LICENSE  Logs.md  README.md  docker-compose.yml  pyproject.toml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: main.py
backend/app/api/routes/: __init__.py  analyse_pdf.py  chat.py
backend/app/core/: config.py  schema.py
backend/app/services/: llm_agents.py  prompt.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.css
frontend/src/components/AnalysisResults/: AnalysisResults.js  YouTubeVideo.js
frontend/src/components/Chat/: Chat.js
frontend/src/components/FileUpload/: FileUpload.js
frontend/src/components/Layout/: Card.js  Spinner.js
frontend/src/hooks/: useAnalysisStatus.js
frontend/src/services/: api.js
