[project]
name = "insurace-bot"
version = "0.1.0"
description = "Let's build a insurance bot that helps people understand the policies better."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "anthropic>=0.34.2",
    "fastapi[standard]>=0.112.1",
    "pydantic-settings>=2.5.2",
    "pypdf>=5.0.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.5",
]
